# XTimer

./: CMakeLists.txt  LICENSE  README.md  build.bat  build_release.bat
XTimer/: CMakeLists.txt  ConfigCreator.h  config.cpp  config.h  gradient_label.h  listener.cpp  listener.h  main.cpp  settings.cpp  settings.h  styles.cpp  styles.h  timer.cpp  timer.h  window.cpp  window.h  window_glow.h
XTimerAPI/: CMakeLists.txt  xtimer_api.cpp  xtimer_api.h  xtimer_api_unix.cpp  xtimer_api_win.cpp
